[package]
name = "dmp-client"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmp-shared = { path = "../dmp-shared" }
anyhow = "1.0.31"
thrussh = "0.26.1"
tokio = "0.2.21"
tokio-rustls = "0.13.1"
webpki = "0.21.2"
webpki-roots = "0.19.0"
tokio-util = { version = "0.3.1", features=["compat"] }
futures = "0.3.5"
