[package]
name = "dmp-client"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmp-shared = { path = "../dmp-shared" }
anyhow = "1.0.31"
thrussh = { git = 'https://github.com/TimeToogo/thrussh-fork' }
tokio = "0.2.21"
tokio-rustls = "0.13.1"
webpki = "0.21.2"
webpki-roots = "0.19.0"
tokio-util = { version = "0.3.1", features=["compat"] }
futures = "0.3.5"
thrussh-keys = "0.17.3"
portable-pty = "0.3.0"
crossterm = "0.17.5"
cryptovec = "0.5.0"
log = "0.4.8"
env_logger = "0.7.1"
libc = "0.2.71"
