[package]
name = "tunshell-server"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

[dependencies]
tunshell-shared = { path = "../tunshell-shared" }
mongodb = { version = "1.0.0", features=["tokio-runtime"] }
tokio = "0.2.21"
tokio-rustls = "0.14.0"
futures = "0.3.5"
anyhow = "1.0.31"
serde = "1.0.114"
serde_json = "1.0.56"
webpki = "0.21.3"
webpki-roots = "0.20.0"
tokio-util = "0.3.1"
log = "0.4.8"
env_logger = "0.7.1"
