[package]
name = "tunshell-server"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

[dependencies]
tunshell-shared = { path = "../tunshell-shared" }
mongodb = { version = "1.0.0", features=["tokio-runtime"] }
tokio = { version = "0.2.21", features=["rt-threaded", "blocking", "time", "io-util", "tcp", "udp", "macros"] }
tokio-util = { version = "0.3.1", features=["compat"] }
tokio-rustls = { version = "0.14.0", features=["dangerous_configuration"] }
futures = "0.3.5"
anyhow = "1.0.31"
serde = "1.0.114"
serde_json = "1.0.56"
webpki = "0.21.3"
webpki-roots = "0.20.0"
log = "0.4.8"
env_logger = "0.7.1"
warp = "0.2.3"
chrono = "0.4.13"
rustls = "0.18.0"
lazy_static = "1.4.0"
rand = "0.7.3"
