[package]
name = "tunshell-server"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

[dependencies]
tunshell-shared = { path = "../tunshell-shared" }
tokio = { version = "0.2.21", features=["rt-threaded", "blocking", "time", "io-util", "tcp", "udp", "macros", "sync"] }
tokio-util = { version = "0.3.1", features=["compat"] }
tokio-rustls = { version = "0.14.0", features=["dangerous_configuration"] }
futures = "0.3.5"
anyhow = "1.0.31"
serde = "1.0.114"
serde_json = "1.0.56"
webpki = "0.21.3"
webpki-roots = "0.20.0"
log = "0.4.8"
env_logger = "0.7.1"
warp = { version = "0.3.3", features=["tls"] }
chrono = "0.4.13"
rustls = "0.18.0"
rand = "0.7.3"
rusqlite = { version = "0.23.1", features=["bundled"] }
uuid = { version = "0.8.1", features=["v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
async-tungstenite = { version = "0.8.0", features=["async-tls", "tokio-runtime"] }
async-tls = "0.9.0"
tungstenite = "0.11.0"
