[package]
name = "tunshell-tests"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"
autotests = false

[dependencies]
tunshell-client = { path = "../tunshell-client" }
tunshell-server = { path = "../tunshell-server" }
tokio = { version = "0.2.21", features=["rt-threaded", "blocking"] }
reqwest = { version = "0.10", features = ["json"] }
env_logger = "0.7.1"
futures = "0.3.5"

[[test]]
name = "tests"
path = "tests/lib.rs"
